# crabber

./: .gitignore  README.md  config.example.json  credential.example.json  pyproject.toml
src/crabber/: crabber.py  credential.py  ffmpeg.py  live_stream.py  logging.py  main.py  misc.py  room_info.py  signal.py  task_manager.py
src/crabber/components/: __init__.py  autofan.py  chatter.py  danmu_logger.py  empty_handler.py  entry_logger.py  europa.py  event_logger.py  gift_logger.py  iris.py  parrot.py  recorder.py  safe_handler.py
src/crabber/components/notify/: __init__.py  napcat_provider.py  notify.py  ntfy_provider.py
src/crabber/database/: cloudflare.py  database.py  interface.py  records.py  sqlite.py
src/crabber/services/: __init__.py  asr.py  init_services.py  interface.py  llm.py  napcat.py  napcat.pyi  ntfy.py
test/: bili_comment_test.py  bili_dahanghai_test.py  bili_dynamic_test.py  bili_emoticon_test.py  bili_gift_test.py  bili_play_info_v2_test.py  emoticon_test.py  fun_asr_test.py  live_status_state_machine_test.py  llm_test.py  napcat_test.py
