[project]
name = "crabber"
version = "0.1.0"
description = "Can you crab a crab like a crabber can crab a crab?"
readme = "README.md"
authors = [
    { name = "capric98", email = "42015599+capric98@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.3",
    "bilibili-api-python>=17.4.1",
    "cloudflare>=4.3.1",
    "tortoise-orm>=1.1.7",
]

[project.scripts]
crabber = "crabber.main:main"

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"
