[project]
name = "crabber"
version = "0.1.0"
description = "Can you crab a crab like a crabber can crab a crab?"
readme = "README.md"
authors = [
    { name = "capric98", email = "42015599+capric98@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.14.1",
    "aiosqlite>=0.22.1",
    "bilibili-api-python>=17.4.2",
    "cloudflare>=5.2.0",
    "dashscope>=1.25.23",
    "openai[aiohttp]>=2.41.0",
    "sqlmodel>=0.0.38",
]

[project.scripts]
crabber = "crabber.main:main"

[build-system]
requires = ["uv_build>=0.10.12,<0.12.0"]
build-backend = "uv_build"
